--- a/templates/index.html
+++ b/templates/index.html
@@ -4,14 +4,24 @@
     <head>
         <meta name="viewport" content="initial-scale=1, width=device-width">
         <title>Searching for friends</title>
+        <style>
+            div {
+                 height: 700px;
+                 border: 5px solid #800000;
+                 background: url(https://cdn.pixabay.com/photo/2020/02/20/16/57/trees-4865244_960_720.jpg) 100% 100% no-repeat;
+                 background-size: cover;
+                }
+        </style>
     </head>
-    <body>
-        <h1>
+    <body  style="text-align: center;">
+        <div>
+            <h1  style="color: white; position: absolute; left: 33%; top: 35%; font-size:38px;font-style:italic;">
             Whose friends do you want to find?
-        </h1>
-        <form action="/map" method="post">
-            <input name="name" placeholder="Name (example: PaulMcCartney)" type="text">
-            <input type="submit" value="Register">
-        </form>
+            </h1>
+            <form action="/map" method="post" style="position: absolute; left: 40%; top: 50%; height:200px; font-size:14pt;">
+                <input name="name" autofocus id="name" placeholder="ex:PaulMcCartney" type="text" style="font-size:12pt">
+                <input type="submit" value="Search" style="font-size:20pt">
+            </form>
+        </div>
     </body>
 </html>
